Upgrade to pac4j 5.4.2